--- a/notuber/index.html
+++ b/notuber/index.html
@@ -5,6 +5,7 @@
   <head>
     <title>Totally Not Uber</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta charset="utf-8" />
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&libraries=geometry"></script>
     <link rel="stylesheet" href="style.css" />
     
@@ -109,6 +110,7 @@
   </head>
   
   <body onload="init()">
+    <h1> Totally Not Uber* </h1>
     <div id="map_canvas"></div>
   </body>
 </html>
