Completed lab, minus readme

--- a/messages/index.html
+++ b/messages/index.html
@@ -5,7 +5,17 @@
   <title>Messages</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
-    // Complete this section...
+    $(document).ready(function(){
+    	$.get("https://messagehub.herokuapp.com/messages.json", function(data) {
+    		if (data != null) {
+    			newData = "";
+    			jQuery.each(data, function(index, value) {
+    				newData+= "<p>" + value["content"] +" by " + value.username + "</p>";
+    			});
+    			$('#messages').html(newData);
+    		}
+    	});
+    });
   </script>
 </head>
 
