Started security report. Added images of 3 hacks

--- a/notuber/index.html
+++ b/notuber/index.html
@@ -14,7 +14,7 @@
       var myLng = 0;
       var request = new XMLHttpRequest();
       var myLoc = new google.maps.LatLng(myLat, myLng);
-      var myName = "1ZTX8P2C";
+      var myName = "JANET";
       var myOptions = {
             zoom: 13, // The larger the zoom number, the bigger the zoom
             center: myLoc,
